<resources>
    <string name="app_name">SheldonCafe</string>
    <string name="title_order_new_page">Home</string>
    <string name="title_order_list_page">Dashboard</string>
    <string name="order_confirm">confirm</string>
    <string name="home_title_name">SheL Cafe</string>
    <string name="order_Iced">Iced</string>
    <string name="order_hot">Hot</string>
    <string name="order_suger_yes">Yes</string>
    <string name="radiobtn_suger_no">No</string>
    <string name="order_item_name">Latte</string>
    <string name="item_ice_type">Type</string>
    <string name="item_suger_text">Suger</string>
    <string name="his_order_num">Order Number:</string>
    <string name="his_order_time">Order Time:</string>
    <string name="his_order_account">Order Account :</string>
    <string name="hit_total_item_text">Total Items:</string>
    <string name="his_total_price">Total Price:</string>

</resources>
