<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.sheldon.sheldoncafe.ordernew.OrderNewViewModel"/>
        <variable name="productItem" type="com.sheldon.sheldoncafe.object.ProductItem"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp" app:srcCompat="@drawable/image_placeholder"
                android:id="@+id/item_image"
                app:imageUrl="@{productItem.image}"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:id="@+id/radioGroup" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/order_item_name"
                app:layout_constraintStart_toEndOf="@+id/item_ice_type_text"
                android:layout_marginStart="38dp">
            <RadioButton
                    android:text="@string/order_Iced"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/radiobtn_iced"
            />
            <RadioButton
                    android:text="@string/order_hot"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/radiobtn_hot"
            />
        </RadioGroup>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:id="@+id/radioGroup2"
                app:layout_constraintStart_toEndOf="@+id/item_suger_text" android:layout_marginStart="32dp">
            <RadioButton
                    android:text="@string/order_suger_yes"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/radiobtn_suger_yes"
            />
            <RadioButton
                    android:text="@string/radiobtn_suger_no"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/radiobtn_suger_no"
            />
        </RadioGroup>
        <TextView
                android:text="@{productItem.name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:id="@+id/order_item_name"
                app:layout_constraintStart_toEndOf="@+id/item_image" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                tools:text="@string/order_item_name"/>
        <TextView
                android:text="@string/item_ice_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_ice_type_text"
                app:layout_constraintStart_toEndOf="@+id/item_image" android:layout_marginStart="32dp"
                tools:text="@string/item_ice_type" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/order_item_name"
        />
        <TextView
                android:text="@string/item_suger_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_suger_text"
                tools:text="@string/item_suger_text"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/item_ice_type_text"
                app:layout_constraintStart_toEndOf="@+id/item_image" android:layout_marginStart="32dp"
        />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp" app:srcCompat="@android:color/darker_gray"
                android:id="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>