<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.sheldon.sheldoncafe.orderlist.OrderListViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/his_order_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_num_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_num" app:layout_constraintStart_toEndOf="@+id/order_num_text"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/order_num_text"
                app:layout_constraintBottom_toBottomOf="@+id/order_num_text"/>
        <TextView
                android:text="@string/his_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_time_text" app:layout_constraintStart_toStartOf="@+id/order_num_text"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/order_num_text"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_time" app:layout_constraintStart_toEndOf="@+id/order_time_text"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/order_time_text"
                app:layout_constraintBottom_toBottomOf="@+id/order_time_text"/>
        <TextView
                android:text="@string/his_order_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_account_text" app:layout_constraintStart_toStartOf="@+id/order_time_text"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/order_time_text"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_account"
                app:layout_constraintTop_toTopOf="@+id/order_account_text"
                app:layout_constraintBottom_toBottomOf="@+id/order_account_text"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/order_account_text"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/hit_total_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_item_text" app:layout_constraintStart_toStartOf="@+id/order_account_text"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/order_account_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_item" app:layout_constraintStart_toEndOf="@+id/total_item_text"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/total_item_text"
                app:layout_constraintBottom_toBottomOf="@+id/total_item_text"/>
        <TextView
                android:text="@string/his_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/total_price_text"
                app:layout_constraintTop_toTopOf="@+id/total_item"
                app:layout_constraintBottom_toBottomOf="@+id/total_item"
                app:layout_constraintEnd_toStartOf="@+id/total_price" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/total_price"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/total_price_text"
                app:layout_constraintBottom_toBottomOf="@+id/total_price_text"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>